--- a/package.json
+++ b/package.json
@@ -1,29 +1,30 @@
 {
-  "name": "saika",
-  "version": "1.0.0",
-  "description": "Sahabat informatika PKM project",
-  "main": "index.js",
-  "type": "module",
-  "scripts": {
-    "devStart": "nodemon server.js"
-  },
-  "keywords": [
-    "saika",
-    "api"
-  ],
-  "author": "Abdul Fatah",
-  "license": "ISC",
-  "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.1",
-    "express": "^4.18.1",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.4.6",
-    "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.1"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.19"
-  }
+    "name": "saika",
+    "version": "1.0.0",
+    "description": "Sahabat informatika PKM project",
+    "main": "index.js",
+    "type": "module",
+    "scripts": {
+        "start": "node server.js",
+        "devStart": "nodemon server.js"
+    },
+    "keywords": [
+        "saika",
+        "api"
+    ],
+    "author": "Abdul Fatah",
+    "license": "ISC",
+    "dependencies": {
+        "bcryptjs": "^2.4.3",
+        "cors": "^2.8.5",
+        "dotenv": "^16.0.1",
+        "express": "^4.18.1",
+        "jsonwebtoken": "^8.5.1",
+        "mongoose": "^6.4.6",
+        "morgan": "^1.10.0",
+        "multer": "^1.4.5-lts.1"
+    },
+    "devDependencies": {
+        "nodemon": "^2.0.19"
+    }
 }
